<resources>
    <string name="app_name">Currency Sell</string>
    <string name="currency_text">Currency</string>
    <string name="exchange_text">Exchange</string>

    <!--first signup page-->
    <string name="fb_login_text">Login with facebook</string>
    <string name="gmail_login_text">Login with email</string>
    <string name="member_text">Not yet a member?</string>
    <string name="sign_up_text"><u>Sign Up</u></string>

    <!--login page-->
    <string name="login_text">Login</string>
    <string name="email_text">Email</string>
    <string name="password_text">Password</string>

    <!--signup page-->
    <string name="first_name_text">First name</string>
    <string name="last_name_text">Last name</string>
    <string name="confirm_password_text">Confirm Password</string>
    <string name="already_member_text">Already member?</string>
    <string name="login_text_underlined"><u>Login</u></string>

    <!--home_left_menu page-->
    <string name="notification_text">Notifications</string>
    <string name="setting_text">Setting</string>
    <string name="trust_text">Trust and verifications</string>
    <string name="sign_out_text">Sign Out</string>

    <!--home page-->
    <string name="people_need_text">PEOPLE NEED</string>
    <string name="people_have_text">PEOPLE HAVE</string>
    <!--create request page-->
    <string name="create_request_text">Create a request</string>
    <string name="create_text">Create</string>

    <string name="scan_text">SCAN</string>


    <!--my request page-->
    <string name="my_request">My Request</string>
    <string name="active_text">ACTIVE</string>
    <string name="finish_text">FINISH</string>

    <!--profile page-->

    <string name="review_text">REVIEW</string>
    <string name="rates_text">RATES</string>
    <string name="update_text">Update</string>

    <!--can page-->
    <string name="confirmed_text">CONFIRMED</string>
    <string name="scaned_text">SCAN</string>


    <!-- Facebook App Id -->
    <string name="facebook_app_id">111222619507033</string>

    <string name="Currencylayer_Key">50cf00a294110960a14cc3b1f330e3fc</string>
    <string name="Free_CC_link">http://free.currencyconverterapi.com/api/v3/convert?q=</string>

    <string name="user_successfully_added">User successfully added!</string>
    <string name="user_unable_to_add">Unable to add user!</string>
    <string name="type_a_message">Type a message...</string>

</resources>
