<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_backround_image">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/currency_text"
        android:textColor="@color/white"
        android:textAllCaps="true"
        android:textSize="@dimen/extra_large_text"
        />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exchange_text"
            android:textColor="@color/white"
            android:textAllCaps="true"
            android:textSize="@dimen/extra_large_text"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/button_background_fb"
            android:gravity="center_vertical|left"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="10dp">


            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="45dp"
                android:padding="5dp">

                <TextView
                    android:id="@+id/tv_fb_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="80dp"
                    android:padding="3dp"
                    android:layout_centerVertical="true"
                    android:text="@string/fb_login_text"
                    android:textColor="@color/white"
                    android:textSize="@dimen/medium_text"
                    android:textStyle="normal"
                   android:textAllCaps="true"
                    />

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/facebook" />

            </RelativeLayout>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_email_login"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:background="@drawable/button_background_gmail"
            android:gravity="center_vertical|left"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="10dp">


            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:padding="5dp">

                <TextView
                    android:id="@+id/tv_gmail_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="80dp"
                    android:text="@string/gmail_login_text"
                    android:layout_centerVertical="true"
                    android:textColor="@color/white"
                    android:textSize="@dimen/medium_text"
                    android:textStyle="normal"
                    android:textAllCaps="true"
                    />

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/email" />

            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/member_text"
                android:textColor="@color/white"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up_text"
                android:textColor="@color/white"
                android:layout_marginLeft="10dp"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>