<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_backround_image">


    <RelativeLayout
        android:id="@+id/rl_header"
        android:layout_width="match_parent"
        android:layout_height="@android:dimen/app_icon_size"
        android:background="@color/colorPrimary">


        <LinearLayout
            android:id="@+id/ll_back_sign_up"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:src="@drawable/ic_back" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/sign_up_text"
            android:textColor="@color/white"
            android:textSize="@dimen/large_text"
            android:textAllCaps="true"/>


    </RelativeLayout>

    <ScrollView
        android:id="@+id/sl_scrollview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rl_header"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center"
                    android:background="@drawable/bg_rounded_profile"
                    android:gravity="center"
                    android:orientation="vertical">

                    <com.at.currencysell.utils.RoundedImageView
                        android:id="@+id/add_photo"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:layout_centerInParent="true"
                        android:layout_gravity="center"
                        android:adjustViewBounds="true"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_camera"
                        />


                </RelativeLayout>

                <EditText
                    android:id="@+id/et_full_name"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/button_background_edittext"
                    android:gravity="center"
                    android:hint="@string/first_name_text"
                    android:inputType="textPersonName"
                    android:padding="10dp"
                    android:textColorHint="@color/white"
                    android:textColor="@color/white"/>

                <EditText
                    android:id="@+id/et_user_name"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/button_background_edittext"
                    android:gravity="center"
                    android:hint="@string/last_name_text"
                    android:inputType="textPersonName"
                    android:padding="10dp"
                    android:textColorHint="@color/white"
                    android:textColor="@color/white"/>

                <EditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/button_background_edittext"
                    android:gravity="center"
                    android:hint="@string/email_text"
                    android:inputType="textEmailAddress"
                    android:padding="10dp"
                    android:textColorHint="@color/white"
                    android:textColor="@color/white"/>

                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/button_background_edittext"
                    android:gravity="center"
                    android:hint="@string/password_text"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:textColorHint="@color/white"
                    android:textColor="@color/white"/>

                <EditText
                    android:id="@+id/et_confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/button_background_edittext"
                    android:gravity="center"
                    android:hint="@string/confirm_password_text"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:textColorHint="@color/white"
                    android:textColor="@color/white"/>


            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:id="@+id/ll_sign_up"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_background_gmail"
        android:layout_below="@+id/sl_scrollview"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:text="@string/sign_up_text"
            android:textAlignment="center"
            android:gravity="center"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/medium_text"
            android:textStyle="bold"
            android:textAllCaps="true"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_member_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:layout_below="@+id/ll_sign_up">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_member_text"
            android:textColor="@color/white"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_text_underlined"
            android:textColor="@color/white"
            android:layout_marginLeft="10dp"/>
    </LinearLayout>

</RelativeLayout>