<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="260dp"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#6C1056"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="40dp">



        <com.github.siyamed.shapeimageview.CircularImageView
            android:id="@+id/add_photo"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:src="@drawable/person"
            app:siBorderColor="@color/white"
            app:siBorderWidth="3dp" />
        <TextView
            android:id="@+id/tv_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="JOHN SINA"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:textColor="@color/white"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/light_white"
            android:layout_marginTop="40dp"></View>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/notification_text"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/white"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/light_white"
            android:layout_marginTop="10dp"></View>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/setting_text"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/white"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/light_white"
            android:layout_marginTop="10dp"></View>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/trust_text"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/white"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/light_white"
            android:layout_marginTop="10dp"></View>


        <TextView
            android:id="@+id/tv_sign_out"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_out_text"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/white"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/light_white"
            android:layout_marginTop="10dp"></View>

    </LinearLayout>



</LinearLayout>